# tygle-sheets

./: README.md  pyproject.toml
tygle_sheets/: __init__.py  sheets.py
tygle_sheets/rest/: __init__.py  spreadsheets.py  values.py
tygle_sheets/types/: __init__.py
tygle_sheets/types/enums/: __init__.py  date_time_render_option.py  dimension.py  error_type.py  insert_data_option.py  value_input_option.py  value_render_option.py
tygle_sheets/types/resources/: __init__.py
tygle_sheets/types/resources/spreadsheets/: __init__.py  cell_data.py  cells.py  error_value.py  extended_value.py  grid_data.py  grid_range.py  other.py  row_data.py  sheet.py  sheet_properties.py  sheets.py  spreadsheet.py  spreadsheet_properties.py  spreadsheets.py
tygle_sheets/types/resources/spreadsheets/chains/: __init__.py  values.py
tygle_sheets/types/resources/values/: __init__.py  value_range.py
tygle_sheets/types/responses/: __init__.py  update_values_response.py
tygle_sheets/types/responses/values/: __init__.py  append_response.py
