[tool.poetry]
name = "tygle-sheets"
version = "0.1.0"
description = ""
authors = ["shmookoff <shmookoff@gmail.com>"]
readme = "README.md"
packages = [{include = "tygle_sheets"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogoogle = "^4.0.0"
pydantic = "^1.9.1"
tygle = "^0.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.14.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
