[tool.poetry]
name = "tygle-sheets"
version = "0.1.1"
description = ""
authors = ["shmookoff <shmookoff@gmail.com>"]
readme = "README.md"
packages = [{include = "tygle_sheets"}]

[tool.poetry.dependencies]
python = "^3.10"
tygle = {path = "/home/shmoo/projects/typed-google/tygle", develop = true}


[tool.poetry.group.dev.dependencies]
pylint = "^2.14.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
