[tool.poetry]
name = "tygle-sheets"
version = "0.1.3"
description = ""
authors = ["shmookoff <shmookoff@gmail.com>"]
readme = "README.md"
packages = [{include = "tygle_sheets"}]

[tool.poetry.dependencies]
python = "^3.10"
tygle = "~0.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.14.4"
black = "^22.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
